fix alignment

--- a/_sass/services/_hero.scss
+++ b/_sass/services/_hero.scss
@@ -29,7 +29,7 @@
     &--2 {
       position: relative;
       @include media-breakpoint-up(md) {
-        right: -35px;
+        right: -95px;
         > div {
           padding-left: 85px;
           padding-right: 0;
